examples/misc/error/execution/index2.bfr
codegen $

$build {
  a: array(2) {
    i: index
  }
}

> a@i
> a@i